repair paddings and margins too big

--- a/apps/about/static/css/about-styles.css
+++ b/apps/about/static/css/about-styles.css
@@ -1,19 +1,16 @@
 .div-about-main{
-  padding: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
+  padding: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .div-about{
-  text-align: justify;
   flex: 1;
 }
 
 .div-skills{
   flex: 2;
   max-width: 800px;
-  padding-left: 30px;
-  padding-right: 30px;
 }
 
 #carouselAbout {
