--- a/static/css/main.css
+++ b/static/css/main.css
@@ -32,8 +32,8 @@ body {
         width: 100%; /* Change to 100% for smaller screens */
     }
     #page-container{
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
     }
 }
 
